<resources>
    <string name="app_name">Together</string>

    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="get_otp">Get Otp</string>
    <string name="login">Login</string>
    <string name="resend_code">Resend Code</string>
    <string name="wrong_number">Wrong Number?</string>


    //database
    //1
    <string name="dbname_users_list">new_login_users_list</string>
    <string name="please_wait">please wait…</string>
    <string name="dbname_new_users_list">users_details_list</string>

    //2
    <string name="field_user_id">user_id</string>
    <string name="save_profile">Save Profile</string>

    <string name="home">Home</string>
    <string name="peoples">Peoples</string>
    <string name="profile">Profile</string>
    <string name="together_txt">Together</string>
    <string name="sign_out">Sign out</string>


    //permission
    <string name="permissify_go_to_settings">Go to settings</string>
    <string name="permissify_permission_rationale_title">Wee need this permission</string>
    <string name="permissify_no_text_fallback">Permissify: No fallback text was provided for this permission</string>

    <string name="location_rationale">location_rationale</string>
    <string name="location_deny_dialog">location_deny_dialog</string>
    <string name="camera_rationale">camera_rationale</string>
    <string name="camera_deny_dialog">camera_deny_dialog</string>




</resources>
